Create page in (close to) shippable state

--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@
                                     <li>@Html.ActionLink("Advanced Search", "advancedsearchform", "song", new {filter = new SongFilter("azure+advanced")}, null)</li>
                                 </ul>
                                 <ul style="list-style-type: none" role="menu">
-                                    <li>@Html.ActionLink("Add Song", "add", "song")</li>
+                                    <li>@Html.ActionLink("Add Song", "augment", "song")</li>
                                 </ul>
                             </li>
                             <li>@Html.ActionLink("Wedding", "wedding-music", "dances")</li>
