--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -99,13 +99,16 @@
                                 </ul>
                             </li>
                             <li>
-                                @Html.ActionLink("Song Library", "azuresearch", "song")
+                                @Html.ActionLink("Song Library", "index", "song")
                                 <ul style="list-style-type: none" role="menu">
                                     <li>@Html.ActionLink("Advanced Search", "advancedsearchform", "song", new {filter = new SongFilter("azure+advanced")}, null)</li>
                                 </ul>
-                                <ul style="list-style-type: none" role="menu">
-                                    <li>@Html.ActionLink("Add Song", "augment", "song")</li>
-                                </ul>
+                                @if (User.IsInRole("canEdit"))
+                                {
+                                    <ul style="list-style-type: none" role="menu">
+                                        <li>@Html.ActionLink("Add Song", "augment", "song")</li>
+                                    </ul>
+                                }
                             </li>
                             <li>@Html.ActionLink("Wedding", "wedding-music", "dances")</li>
                             <li>@Html.ActionLink("Tags", "index", "tag")</li>
