--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -8,8 +8,16 @@
 }
 <html>
 <head>
+    <!-- Google Adsense Verifier -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8181165353763371",
+            enable_page_level_ads: true
+        });
+    </script>
     <!-- TradeDoubler site verification 2516966 -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Music4Dance: Shall we dance...to music?</title>
     @if (@ViewData.ContainsKey("Description"))
@@ -18,10 +26,10 @@
     }
     @if (@ViewData.ContainsKey("Canonical"))
     {
-        <link rel="canonical" href="@ViewBag.Canonical" />
+        <link rel="canonical" href="@ViewBag.Canonical"/>
     }
 
-    <link rel="shortcut icon" href="~/Content/favicon.png" />
+    <link rel="shortcut icon" href="~/Content/favicon.png"/>
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro|Merienda:700" rel="stylesheet" type="text/css">
     @{
         string theme = "blog";
@@ -32,7 +40,7 @@
         string themeBundle = "~/bundles/" + theme;
     }
     @Styles.Render(themeBundle)
-    @RenderSection("styles",false)
+    @RenderSection("styles", false)
     <script type="text/javascript">
         var appInsights = window.appInsights || function(config) {
             function r(config) {
@@ -60,15 +68,20 @@
         }
     </script>
     <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-54250212-1', 'auto');
-    ga('send', 'pageview');
+        ga('create', 'UA-54250212-1', 'auto');
+        ga('send', 'pageview');
     </script>
     @Scripts.Render("~/bundles/modernizr")
 </head>
