Blog update + small fixes to info pages

--- a/m4d/Views/Home/About.cshtml
+++ b/m4d/Views/Home/About.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "About Us";
-    ViewBag.Canonical = "https://www.music4dance.net";
+    ViewBag.Canonical = "https://www.music4dance.net/about";
     ViewBag.Description = "About the creators of music4dance.net";
 }
 
