--- a/m4d/Views/Home/FAQ.cshtml
+++ b/m4d/Views/Home/FAQ.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "FAQ";
-    ViewBag.Canonical = "https://www.music4dance.net";
+    ViewBag.Canonical = "https://www.music4dance.net/faq";
     ViewBag.Description = "Frequently Asked Questions about Music4Dance and the answers.";
 }
 
