--- a/m4d/Views/Home/SiteMap.cshtml
+++ b/m4d/Views/Home/SiteMap.cshtml
@@ -1,4 +1,9 @@
 ﻿@using m4d.ViewModels
+@{
+    ViewBag.Title = "SiteMap";
+    ViewBag.Canonical = "https://www.music4dance.net/sitemap";
+    ViewBag.Description = "music4dance site map";
+}
 
 @helper TitleLink (SiteMapEntry entry, string type)
 {
