--- a/m4d/Views/Home/Credits.cshtml
+++ b/m4d/Views/Home/Credits.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Credits";
+    ViewBag.Canonical = "https://www.music4dance.net/credits";
+    ViewBag.Description = "music4dance credits page";
 }
 
 
