Fixes and documentation for Add Song

--- a/m4d/Views/Home/Counter.cshtml
+++ b/m4d/Views/Home/Counter.cshtml
@@ -15,13 +15,13 @@
         </div>
         <!-- Split button -->
         <div class="btn-group">
-            <button type="button" id="service" value="0" class="btn btn-primary service-lookup">Find Anywhere</button>
+            <button type="button" id="service" value="0" class="btn btn-primary service-lookup">Find</button>
             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="caret"></span>
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
             <ul class="dropdown-menu">
-                <li><a href='#' id="service-0" class="service-lookup">Find Anywhere</a></li>
+                <li><a href='#' id="service-0" class="service-lookup">Find</a></li>
                 <li><a href='#' id="service-s" class="service-lookup">On Spotify</a></li>
                 <li><a href='#' id="service-i" class="service-lookup">On ITunes</a></li>
                 <li><a href='#' id="service-a" class="service-lookup">On Amazon</a></li>
