--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
                                 <ul style="list-style-type: none" role="menu">
                                     <li>@Html.ActionLink("Advanced Search", "advancedsearchform", "song", new {filter = new SongFilter("azure+advanced")}, null)</li>
                                 </ul>
-                                @if (User.IsInRole("canEdit"))
+                                @if (User.IsInRole("canTag"))
                                 {
                                     <ul style="list-style-type: none" role="menu">
                                         <li>@Html.ActionLink("Add Song", "augment", "song")</li>
